# rising_common

./: README.md
moveit_kinova/: .setup_assistant  package.xml
moveit_kinova/config/: controllers.yaml  controllers_simulation.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  rising.srdf  ros_controllers.yaml
moveit_kinova/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rising_moveit_config.launch  rising_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rising_common/: CMakeLists.txt  package.xml
rising_control/: CMakeLists.txt  package.xml
rising_control/config/: arm_control.yaml  gripper_control.yaml  rising_control.yaml  robot_control.yaml  twist_mux.yaml
rising_control/launch/: rising_control.launch
rising_description/: CMakeLists.txt  package.xml
rising_description/launch/: rising_rviz.launch  rising_state.launch
rising_description/meshes/base/: rising_base.dae  rising_base.stl  rising_kinova_support.stl
rising_description/meshes/flippers/: back_flipper.stl  collision_back_flippers.dae  collision_back_flippers.stl  collision_back_flippers_final.dae  collision_back_flippers_final.stl  collision_front_flippers.dae  collision_front_flippers.stl  front_flipper.stl  (+5 more)
rising_description/robots/: rising_platform.urdf.xacro  rising_std.urdf.xacro  rising_std_cartographer.urdf
rising_description/urdf/: common.gazebo.xacro  inertia.urdf.xacro
rising_localization/: CMakeLists.txt  package.xml
rising_localization/launch/: amcl.launch  map_server.launch
rising_manipulation/: CMakeLists.txt  package.xml
rising_manipulation/config/: objects_config.yaml  robot_config.yaml
rising_manipulation/include/rising_manipulation/: deep_pick_task.h  manipulation_app.h
rising_manipulation/launch/: manipulation_app.launch
rising_manipulation/src/: deep_pick_task.cpp  manipulation_app.cpp  manipulation_app_node.cpp
rising_manipulation_msgs/: CMakeLists.txt  msg  package.xml
rising_manipulation_msgs/action/: MoveTo.action
rising_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rising_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  rising.srdf  ros_controllers.yaml
rising_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rising_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rising_moveit_config_change/config/: rising.srdf
(+17 files in other folders)
