<package format="2">
  <name>rising_manipulation_msgs</name>
  <version>0.11.0</version>
  <description>Messages, services and actions used by HR Component Sorting</description>
  <maintainer email="mbosch@robotnik.es">Marc Bosch-Jorge</maintainer>

  <license>BSD</license>  

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <!--<depend>octomap_msgs</depend>-->
  <depend>actionlib_msgs</depend>
  <!--<depend>sensor_msgs</depend>-->
  <depend>geometry_msgs</depend>
  <!--<depend>trajectory_msgs</depend>-->
  <!--<depend>shape_msgs</depend>-->
  <!--<depend>object_recognition_msgs</depend>-->
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
